--- a/lecturelist.html
+++ b/lecturelist.html
@@ -119,7 +119,13 @@
                         <div id="daterangeslider">
                         </div>
                     </div>
-                    <button type="submit" class="s3d-button s3d-header-button rss_settings_btnAddUrl">Save</button>
+                    
+                    <div class="dialog_buttons" 
+                         id="lecturelist_settings_save_cancel_container" 
+                         style="display: block; ">
+                        <button type="button" id="lecturelist_settings_cancel" class="s3d-bold s3d-link-button">Cancel</button>
+                        <button type="submit" id="lecturelist_settings_save" class="s3d-button s3d-overlay-action-button">Save changes</button>
+                    </div>
                 </div>
             </form>
         </div>
