--- a/lecturelist.html
+++ b/lecturelist.html
@@ -8,7 +8,12 @@
         <!-- Stuff for JS templating -->
         <div id="agenda_template" style="display: none;"><!--
             <div>
-            <h1 class="header1 lecture-subject">${title}</h1>
+            <h1 id="title" class="header1 lecture-subject">
+                ${title}
+                <a style="display: none;" href="${webcalFeedUrl}" title="Subscribe to these events in your external calendar">
+                    <img src="/devwidgets/lecturelist/images/external.png"></img>
+                </a>
+            </h1>
             <div id="lecturelist_lectures">
               <table id="agenda">
                 {for day in days}
