Settings slider restores date range state correctly now.

--- a/lecturelist.html
+++ b/lecturelist.html
@@ -129,7 +129,7 @@
                          id="lecturelist_settings_save_cancel_container" 
                          style="display: block; ">
                         <button type="button" id="lecturelist_settings_cancel" class="s3d-bold s3d-link-button">Cancel</button>
-                        <button type="submit" id="lecturelist_settings_save" class="s3d-button s3d-overlay-action-button">Save changes</button>
+                        <button type="button" id="lecturelist_settings_save" class="s3d-button s3d-overlay-action-button">Save changes</button>
                     </div>
                 </div>
             </form>
