Replaced loading.gif with built in ajax_load.gif in Sakai UX.

--- a/calendarfeed.html
+++ b/calendarfeed.html
@@ -83,7 +83,7 @@
         <!-- MAIN VIEW -->
         <div id="calendarfeed_main" style="display:none;">
             <div class="loading" style="display: none;">
-                <img class="center" alt="loading.." src="/devwidgets/calendarfeed/images/loading.gif"></img>
+                <img class="center" alt="loading.." src="/dev/images/ajax_load.gif"></img>
             </div>
             <div class="ajax-content" style="/*display: none;*/">
             </div>
