Removed closing </img> tags.

--- a/calendarfeed.html
+++ b/calendarfeed.html
@@ -11,7 +11,7 @@
             <h1 id="title" class="header1 lecture-subject">
                 ${title}
                 <a style="display: none;" href="${webcalFeedUrl}" title="Subscribe to these events in your external calendar">
-                    <img src="/devwidgets/calendarfeed/images/external.png"></img>
+                    <img src="/devwidgets/calendarfeed/images/external.png">
                 </a>
             </h1>
             <div id="calendarfeed_lectures">
@@ -83,7 +83,7 @@
         <!-- MAIN VIEW -->
         <div id="calendarfeed_main" style="display:none;">
             <div class="loading" style="display: none;">
-                <img class="center" alt="loading.." src="/dev/images/ajax_load.gif"></img>
+                <img class="center" alt="loading.." src="/dev/images/ajax_load.gif">
             </div>
             <div class="ajax-content" style="/*display: none;*/">
             </div>
